--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <img id="ava" src="assets/img/avatar.jpg" alt="avatar" width="320" height="240">
         <div class="container-main">
             <h1>Valentin</h1>
+            <h2>!!! ВАЖНО !!! Ссылка на задание https://valn10.github.io/shelter/shelter/main/</h2>
+            <h2> при сабмите копировал мышкой ссылку и обрезало остаток ссылки</h2>
+            <h2>Мой дискорд valn10 для связи</h2>
             <h2 id="contacts">Contacts: </h2> 
                 <ul class="line">
                 <li><a href="mailto:valentin.chn@hotmail.com" title="Mailto">valentin.chn@hotmail.com</a></li>
@@ -47,8 +50,8 @@
                 <a href="https://valn10.github.io/rsschool-cv/" title="sample">sample</a>
                 <a href="https://rolling-scopes-school.github.io/valn10-JSFEPRESCHOOL/portfolio/" title="sample">sample</a>
             </h2>
-            <h2 id="education">Education: University degree</h2>
-            <h2 id="english">English: Intermediate</h2>
+            <h2 id="education">Education: yes</h2>
+            <h2 id="english">English: OK</h2>
         </div>
     </main>
    <footer class="footer">
