--- a/shelter/main/index.html
+++ b/shelter/main/index.html
@@ -23,20 +23,37 @@
                 </ul>
             </nav>
             <div class="header_burger">
-                <span></span>
+                <input id="menu_toggle" type="checkbox">
+                <label class="menu_btn" for="menu_toggle">
+                    <span></span>
+                </label>
+                <div class="menu_box">
+                <div class="burger_logo">
+                    <h1 class="logo_title">Cozy House</h1>
+                    <h2 class="logo_text">Shelter for pets in Boston</h2>
+                </div>
+                <ul class="menu_list">
+                    <li><a href="#" class="menu_line about">About the shelter</a></li>
+                    <li><a href="../pets/index.html" class="menu_line">Our pets</a></li>
+                    <li><a href="#help_link" class="menu_line">Help the shelter</a></li>
+                    <li><a href="#contacts" class="menu_line">Contacts</a></li>
+                </ul>
+                </div>
             </div>
         </header>
         <main class="main">
             <section class="start">
-                <div class="start_info">
-                    <h2 class="start_title">Not only people</br>need a house</h2>
-                    <h3 class="start_text">
-                        We offer to give a chance to a little and nice puppy with an extremely </br> wide and open heart. He or she will love you more than anybody else </br> in the world, you will see!
-                    </h3>
-                    <button class="start_button"><a href="#friends" style="text-decoration: none; color: #292929;">Make a friend</a></button>
-                </div>
-                <div class="start_image">
-                    <img src="../assets/images/Start_screen_puppy.png" alt="puppy" class="start_image_puppy">
+                <div class="start_content">
+                    <div class="start_info">
+                        <h2 class="start_title">Not only people</br>need a house</h2>
+                        <h3 class="start_text">
+                        We offer to give a chance to a little and nice puppy with an extremely</br>wide and open heart. He or she will love you more than anybody else</br>in the world, you will see!
+                        </h3>
+                        <button class="start_button"><a href="#friends" style="text-decoration: none; color: #292929;">Make a friend</a></button>
+                    </div>
+                    <div class="start_image">
+                        <!-- <img src="../assets/images/Start_screen_puppy.png" alt="puppy" class="start_image_puppy"> -->
+                    </div>
                 </div>
             </section>
             <section class="about">
@@ -60,22 +77,26 @@
                     <div class="pets_title"><a name="friends" style="text-decoration: none;">Our friends who</br>are looking for a house</a></div>
                     <div class="pet_scroll">
                         <button class="scroll">&larr;</button>
-                        <div class="card">
+                        <div class="card n1">
                             <img src="../assets/images/pet-katrine.png" alt="pet" class="pet">
                             <h3 class="pet_name">Katrine</h3>
                             <button class="pt_btn">Learn more</button>
                         </div>
-                        <div class="card">
+                        <div class="card n2">
                             <img src="../assets/images/pet-jennifer.png" alt="pet" class="pet">
                             <h3 class="pet_name">Jennifer</h3>
                             <button class="pt_btn">Learn more</button>
                         </div>
-                        <div class="card">
+                        <div class="card n3">
                             <img src="../assets/images/pet-woody.png" alt="pet" class="pet">
                             <h3 class="pet_name">Woody</h3>
                             <button class="pt_btn">Learn more</button>
                         </div>
                         <button class="scroll">&rarr;</button>
+                        <span class="btn_320">
+                            <span class="btn_btn">&larr;</span>
+                            <span class="btn_btn">&rarr;</span>
+                        </span>
                     </div>
                     <button class="pets_btn"><a href="../pets/index.html #our_pets" style="text-decoration: none; color: #292929;">Get to know the rest</a></button>
                 </div>
@@ -125,15 +146,13 @@
             </section>
             <section class="donation">
                 <div class="donat_content">
-                    <div class="don_image">
-                        <img src="../assets/images/donat_dog.png" alt="dog" class="donat_dog">
-                    </div>
                     <div class="donat_check">
                         <h2 class="donat_title">You can also make a donation</h2>
                         <h3 class="donat_text">Name of the bank / Type of bank account</h3>
                         <a href="https://egida.by/"><button class="donat_card"></button></a>
                         <h4 class="donat_info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</h4>
                     </div>
+                    <div class="don_image"></div>
                 </div>
             </section>
         </main>
@@ -147,7 +166,7 @@
                 <div class="footer_info">
                     <h2 class="footer_title">We are waiting for your visit</h2>
                     <a href="https://goo.gl/maps/3gsjQSCiPXo44Vy88"><img src="../assets/icons/Boston.png" alt="Boston" class="boston"></a>
-                    <a href="https://goo.gl/maps/gmVVbn5AzzRm7Tsu6"></a><img src="../assets/icons/London.png" alt="London" class="london">
+                    <a href="https://goo.gl/maps/gmVVbn5AzzRm7Tsu6"><img src="../assets/icons/London.png" alt="London" class="london"></a>
                 </div>
                 <div class="footer_img"><img src="../assets/images/footer_puppy.png" alt="puppy"></div>
 
