fix: menu burger and layout

--- a/shelter/main/index.html
+++ b/shelter/main/index.html
@@ -92,10 +92,10 @@
                             <button class="pt_btn">Learn more</button>
                         </div>
                         <button class="scroll">&rarr;</button>
-                        <span class="btn_320">
-                            <span class="btn_btn">&larr;</span>
-                            <span class="btn_btn">&rarr;</span>
-                        </span>
+                        <div class="btn_320">
+                            <div class="btn">&larr;</div>
+                            <div class="btn">&rarr;</div>
+                        </div>
                     </div>
                     <button class="pets_btn"><a href="../pets/index.html #our_pets" style="text-decoration: none; color: #292929;">Get to know the rest</a></button>
                 </div>
